--- a/NutriVaSe/Views/Shared/_LoginPartial.cshtml
+++ b/NutriVaSe/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "" }))
     {
     @Html.AntiForgeryToken()
 
@@ -16,7 +16,7 @@
                  </li>
                  <li class="divider"></li>
                  <li>
-                     <a href="javascript:document.getElementById('logoutForm').submit()"><i class="fa fa-sign-out fa-fw"></i> <i class="fa fa-sign-out"></i> Salir</a>
+                     <a href="javascript:document.getElementById('logoutForm').submit()"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
                  </li>
              </ul>
              <!-- /.dropdown-user -->
